--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/Razor/Pages/Index.razor.g.c
 *.dll
 *.js
 *.js
+adaptTerrariaWiki/.vs/adaptTerrariaWiki/v17/.suo
