--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,13 @@
 
-adaptTerrariaWiki/.vs/adaptTerrariaWiki/v17/.suo
-*.dll
-adaptTerrariaWiki/.vs/adaptTerrariaWiki/v17/.suo
-*.pdb
 *.dll
 *.pdb
-adaptTerrariaWiki/adaptTerrariaWiki/bin/Debug/net5.0/wwwroot/_framework/blazor.boot.json
 *.js
-*.js
-*.dll
 *.ls
 *.org
-*.pdb
 *.cache
+*.suo
+adaptTerrariaWiki/adaptTerrariaWiki/bin/Debug/net5.0/wwwroot/_framework/blazor.boot.json
 adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/blazor.boot.json
 adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/project.razor.vs.json
-*.dll
-*.pdb
 adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/Razor/Pages/Counter.razor.g.cs
 adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/Razor/Pages/Index.razor.g.cs
-*.dll
-*.dll
-*.js
-*.js
-adaptTerrariaWiki/.vs/adaptTerrariaWiki/v17/.suo
