--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/blazor.boot.json
 adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/project.razor.vs.json
 adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/Razor/Pages/Counter.razor.g.cs
 adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/Razor/Pages/Index.razor.g.cs
+adaptTerrariaWiki/terraria_api/.vs/terraria_api/FileContentIndex/cbe9ff6f-8be2-4787-a507-4b75b60a0ea2.vsidx
