--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/Razor/Pages/Counter.razor.g
 adaptTerrariaWiki/adaptTerrariaWiki/obj/Debug/net5.0/Razor/Pages/Index.razor.g.cs
 adaptTerrariaWiki/terraria_api/.vs/terraria_api/FileContentIndex/cbe9ff6f-8be2-4787-a507-4b75b60a0ea2.vsidx
 adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/terraria_api.AssemblyInfo.cs
+adaptTerrariaWiki/terraria_api/.vs/terraria_api/v17/DocumentLayout.backup.json
+adaptTerrariaWiki/terraria_api/.vs/terraria_api/v17/DocumentLayout.json
+adaptTerrariaWiki/terraria_api/terraria_api/bin/Debug/net8.0/terraria_api.exe
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/apphost.exe
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/terraria_api.AssemblyInfo.cs
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/terraria_api.sourcelink.json
