--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ adaptTerrariaWiki/terraria_api/terraria_api/bin/Debug/net8.0/terraria_api.exe
 adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/apphost.exe
 adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/terraria_api.AssemblyInfo.cs
 adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/terraria_api.sourcelink.json
+adaptTerrariaWiki/terraria_api/.vs/terraria_api/v17/DocumentLayout.backup.json
+adaptTerrariaWiki/terraria_api/.vs/terraria_api/v17/DocumentLayout.json
+adaptTerrariaWiki/terraria_api/terraria_api/bin/Debug/net8.0/terraria_api.exe
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/ApiEndpoints.json
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/apphost.exe
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/EndpointInfo/terraria_api.json
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/terraria_api.AssemblyInfo.cs
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/terraria_api.sourcelink.json
