--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/apphost.exe
 adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/EndpointInfo/terraria_api.json
 adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/terraria_api.AssemblyInfo.cs
 adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/terraria_api.sourcelink.json
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/EndpointInfo/terraria_api.json
+adaptTerrariaWiki/terraria_api/terraria_api/obj/Debug/net8.0/ApiEndpoints.json
+adaptTerrariaWiki/terraria_api/.vs/terraria_api/v17/DocumentLayout.json
