working version api

--- a/adaptTerrariaWiki/terraria_api/terraria_api/appsettings.json
+++ b/adaptTerrariaWiki/terraria_api/terraria_api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "TerrariaContext": "Server=(localdb)\\mssqllocaldb;Database=TerrariaDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+  "DatabasePath": "C:\\Users\\shone\\AppData\\Local"
 }
